--- a/views/stylesheets/gr.css
+++ b/views/stylesheets/gr.css
@@ -36,6 +36,10 @@ a {
     font-weight: bold;
 }
 
+.wrapper > .comment {
+    padding: 10px;
+}
+
 .browsetitle {
     text-shadow:  0 0 10px rgba(0,0,0,0.3);
 }
